--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "async": "^3.2.4",
+    "axios": "^1.3.5",
     "body-parser": "^1.20.1",
+    "btoa": "^1.2.1",
     "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
